--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <title>JavaScript Flashcards</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="row">
+        <h1>Intro to Programming Flashcards</h1>
+      </div>
+      <div class="row">
+        <div class="well">
+          <div class="panel panel-default">
+            <div class="panel-heading">Concept:</div>
+            <div class="panel-body"></div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">Definition:</div>
+            <div class="panel-body"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <button class="btn btn-default" type="button">Next</button>
+        <button class="btn btn-default" type="button">Glossary</button>
+      </div>
+    </div>  
   </body>
 </html>
