--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="container">
       <div class="row">
         <h1>Intro to Programming Flashcards</h1>
+        <p>Click the panel for the corresponding answer</p>
       </div>
       <div class="row">
         <div class="well">
-          <div class="panel panel-default">
+          <div class="panel panel-default" id="conceptPanel">
             <div class="panel-heading">Concept:</div>
             <div class="panel-body"></div>
           </div>
-          <div class="panel panel-default">
+          <div class="panel panel-default" id="definitionPanel">
             <div class="panel-heading">Definition:</div>
             <div class="panel-body"></div>
           </div>
@@ -29,6 +30,6 @@
         <button class="btn btn-default" type="button">Next</button>
         <button class="btn btn-default" type="button">Glossary</button>
       </div>
-    </div>  
+    </div>
   </body>
 </html>
