add clickable panels and next button logic

--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
         <div class="well">
           <div class="panel panel-default" id="conceptPanel">
             <div class="panel-heading">Concept:</div>
-            <div class="panel-body"></div>
+            <div class="panel-body">
+              <p id="conceptName"></p>
+            </div>
           </div>
           <div class="panel panel-default" id="definitionPanel">
             <div class="panel-heading">Definition:</div>
-            <div class="panel-body"></div>
+            <div class="panel-body">
+              <p id="conceptDef"></p>
+            </div>
           </div>
         </div>
       </div>
       <div class="row">
-        <button class="btn btn-default" type="button">Next</button>
-        <button class="btn btn-default" type="button">Glossary</button>
+        <button id="nextButton" class="btn btn-default" type="button">Next</button>
+        <button id="glossaryButton" class="btn btn-default" type="button">Glossary</button>
       </div>
     </div>
   </body>
