link to glossary HTML file when button is clicked

--- a/glossary.html
+++ b/glossary.html
@@ -9,7 +9,10 @@
     <title>Flashcard Glossary</title>
   </head>
   <body>
-    <ul id="glossaryList">
-    </ul>
+    <div class="container">
+      <h1>Intro to Programming Fashcard Glossary</h1>
+      <ul id="glossaryList">
+      </ul>
+    </div>
   </body>
 </html>
