--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="row">
         <button id="nextButton" class="btn btn-default" type="button">Next</button>
-        <button id="glossaryButton" class="btn btn-default" type="button">Glossary</button>
+        <a href="glossary.html"><button id="glossaryButton" class="btn btn-default" type="button">Glossary</button></a>
       </div>
     </div>
   </body>
