change panel colors.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </div>
       <div class="row">
         <div class="well">
-          <div class="panel panel-default" id="conceptPanel">
+          <div class="panel panel-info" id="conceptPanel">
             <div class="panel-heading">Concept:</div>
             <div class="panel-body">
               <p id="conceptName"></p>
             </div>
           </div>
-          <div class="panel panel-default" id="definitionPanel">
+          <div class="panel panel-danger" id="definitionPanel">
             <div class="panel-heading">Definition:</div>
             <div class="panel-body">
               <p id="conceptDef"></p>
